BUG: .type-list의 overflow-X 속성 수정 -common.css

--- a/02-lezhin-comics/css/common/common.css
+++ b/02-lezhin-comics/css/common/common.css
@@ -418,7 +418,7 @@
 .type-list{
   display: flex;
   width: 100%;
-  overflow-X: scroll;
+  overflow-X: auto;
 }
 
 .type{
@@ -638,4 +638,17 @@
 /* Footer - p(lezhin-copyright) */
 .lezhin-copyright{
   white-space: normal;
+}
+
+
+/* 강조효과 */
+.header-nav-active::after{
+  content: '';
+  position: relative;
+  top: -10px;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
 }
